# SoH-AudioTool

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
patches/: vadpcm-msvc.patch
scripts/: apply-vadpcm-patch.ps1
src/: AudioFormats.cpp  AudioFormats.h  Process.cpp  Process.h  SohSampleWriter.cpp  SohSampleWriter.h  main.cpp
